codama-macros/tests/codama_attribute/type_nodes/boolean_type_node/unrecognized_attribute.fail.rs
use codama_macros::codama;

#[codama(type = boolean(foo = 42))]
pub struct Test;

fn main() {}
